--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -37,5 +37,5 @@
 .btn--large:hover {
     background: #fff;
     color: #242424;
-    transform: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
 }
