--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,8 +7,7 @@ video {
 }
 
 .hero-container {
-    /* background: url('/src/images/img-home.jpg') center center/cover
-    no-repeat; */
+    background: url('../videos/video-2.mp4') center center/cover no-repeat;
     height: 100vh;
     width: 100%;
     display: flex;
