--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,3 +6,14 @@
     justify-content: center;
     align-self: center;
 }
+
+.footer-subscription {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 24px;
+    padding: 24px;
+    color:white;
+}
