--- a/src/components/IntroSection.css
+++ b/src/components/IntroSection.css
@@ -1,48 +1,57 @@
-video {
+/* video {
     object-fit: cover;
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: -1;
-}
+} */
 
-.hero-container {
-    background: url('../videos/video-2.mp4') center center/cover no-repeat;
+.intro-container {
+    background-color: rgb(0, 0, 34);
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
 }
 
-.hero-container > h1 {
+.intro-container > h1 {
     color: white;
-    font-size: 100px;
-    margin-top: -100px;
+    font-family: "New Century Schoolbook", "TeX Gyre Schola", serif;
+    font-size: 90px;
+    margin-top: -150px;
+    margin-left: 50px;
 }
 
-.hero-container > p {
-    margin-top: 8px;
+.intro-container > p {
+    margin-top: -4px;
+    margin-left: 50px;
     color: white;
-    font-size: 32px;
+    font-size: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
-.hero-btns {
-    margin-top: 32px;
+.intro-container > h2 {
+    color: white;
+    margin-left: 50px;
 }
 
-.hero-btns .btn {
+.intro-btns {
+    margin-top: 20px;
+    margin-left: 47px;
+}
+
+.intro-btns .btn {
     margin: 6px;
 }
 
-.fa-play-circle {
+/* .fa-play-circle {
     margin-left: 4px;
-}
+} */
 
 @media screen and (max-width: 960px) {
     .hero-container > h1 {
@@ -61,12 +70,16 @@ video {
         font-size: 30px;
     }
 
+    .hero-container > h2 {
+        margin-left: 30px;
+    }
+
     .btn-mobile {
         display: block;
         text-decoration: none;
     }
 
     .btn {
-        width: 100%
+        width: 40%
     }
 }
