--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,13 +1,13 @@
 .footer-container {
-    background-color: #242424;
-    padding: 4rem 0 2rem 0;
+    background-color: #30395f;
+    padding: 1rem 0 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.footer-subscription {
+/* .footer-subscription {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +30,7 @@
 .footer-subscription-text {
     margin-bottom: 24px;
     font-size: 20px;
-}
+} 
 
 .footer-input {
     padding: 8px 20px;
@@ -89,7 +89,7 @@
 
 .footer-input::placeholder {
     color: #b1b1b1;
-}
+}*/
 
 /* Social Icons */
 .social-icon-link {
