--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, #30395f 0%, #30395f 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -25,6 +25,8 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
+    font-family: "New Century Schoolbook", "TeX Gyre Schola", serif;
+    font-weight: 600;
     display: flex;
     align-items: center;
 }
