work in progress. gonna test out react-bootstrap

--- a/src/components/IntroSection.css
+++ b/src/components/IntroSection.css
@@ -34,6 +34,12 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+/* .pfp-image {
+    max-width: 1000%;
+    height: auto;
+    margin-left: 1000px;
+} */
+
 .intro-btns {
     margin-top: 20px;
     margin-left: 47px;
